now, overflow problem got fixed. button

--- a/_intro.scss
+++ b/_intro.scss
@@ -45,23 +45,25 @@ html {
     overflow-x: hidden;
 
     .intro-arrow {
-      position: relative;
+      display: inline-block;
+      background: linear-gradient(50deg, orange 20%, white);
+      border-right: 1.5px solid white;
+      border-bottom: 1.5px solid white;
+      box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
+      text-shadow: 0px 0px 1px rgb(0, 0, 0);
+      border-bottom-right-radius: 100%;
+      width: 3rem;
+      height: 3rem;
+      cursor: pointer;
     }
     
     i {
-      position: absolute;
-      top: -30px;
-      left: -17px;
+      margin: 3px;
+      width: 10px;
+      height: 15px;
       color: white;
-      background: linear-gradient(50deg, orange 20%, white);
-      border: 2px solid white;
-      border-radius: 50%;
       font-size: 2rem;
       transform: rotate(225deg);
-      padding: 2.5rem 2rem 2.5rem 1rem;
-      box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
-      text-shadow: 0px 0px 1px rgb(0, 0, 0);
-      cursor: pointer;
       transition: 0.5s all ease;
     }
 
@@ -85,10 +87,10 @@ html {
 
 }
 
-.intro-arrow-active {
-  padding-left: 2rem;
-  color: red;
-}
+// .intro-arrow-active {
+//   padding-left: 2rem;
+//   color: red;
+// }
 
 .intro-heading {
   display: flex;
