--- a/style.css
+++ b/style.css
@@ -77,25 +77,27 @@ html {
 }
 
 .intro .dancegroup2 .intro-arrow {
-  position: relative;
-}
-
-.intro .dancegroup2 i {
-  position: absolute;
-  top: -30px;
-  left: -17px;
-  color: white;
+  display: inline-block;
   background: linear-gradient(50deg, orange 20%, white);
-  border: 2px solid white;
-  border-radius: 50%;
-  font-size: 2rem;
-  -webkit-transform: rotate(225deg);
-          transform: rotate(225deg);
-  padding: 2.5rem 2rem 2.5rem 1rem;
+  border-right: 1.5px solid white;
+  border-bottom: 1.5px solid white;
   -webkit-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
           box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
   text-shadow: 0px 0px 1px black;
+  border-bottom-right-radius: 100%;
+  width: 3rem;
+  height: 3rem;
   cursor: pointer;
+}
+
+.intro .dancegroup2 i {
+  margin: 3px;
+  width: 10px;
+  height: 15px;
+  color: white;
+  font-size: 2rem;
+  -webkit-transform: rotate(225deg);
+          transform: rotate(225deg);
   -webkit-transition: 0.5s all ease;
   transition: 0.5s all ease;
 }
@@ -115,11 +117,6 @@ html {
 .intro .dancegroup2-active {
   -webkit-transform: translate(0%, 0%);
           transform: translate(0%, 0%);
-}
-
-.intro-arrow-active {
-  padding-left: 2rem;
-  color: red;
 }
 
 .intro-heading {
